September 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/CheatDlg.c: Always enable the value inputbox when "New Search" is
   clicked.

September 21, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdrom.c: Reverted the previous change as the CD change problem
   can be fixed in the cdrSapu plugin.

September 20, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/glue/sys/mman.h: Use VirtualAlloc() and VirtualFree() instead of
   malloc() and free().
 * libpcsxcore/ix86/iR3000A.c: Minor cleanup.
 * po/zh_TW.po: Updated.
 * libpcsxcore/cdrom.c: Close & reopen the CDR plugin after switching discs.

September 18, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/CheatDlg.c: Disable "Search Type" combo box if search results
   already exist.

September 16, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * po/pt_BR.po, po/pt_BR.gmo: Added Portuguese (Brazil) translation. Thanks
   to Tibério Vítor <tvtoon at gmail dot com>.
 * po/LINGUAS: Added pt_BR.po.
 * po/pcsx.pot: Updated.
 * gui/Cheat.c: Use checkboxes for toggling cheats.
 * data/pcsx.glade2: Likewise.

September 15, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * debian/changelog: Bumped version.

September 12, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Disregard the synchronization information and header
   data when playing CDDA music.

September 8, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/ConfigurePlugins.c: Select a real BIOS instead of the Internal
   HLE BIOS by default at the first run.
 * gui/Gtk2Gui.c: Likewise.
 * gui/LnxMain.c: Scan BIOSes in certain system-wide directories and place
   symlinks in ~/.pcsx/bios.
 * gui/Makefile.am, gui/Makefile.in: Added PSEMU_DATA_DIR.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po: Updated.

September 7, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfsound/alsa.c: Removed ALSA-specific CDDA stuff, which causes
   problems with some versions of PulseAudio.